packages/midi-markdown/midi_markdown-0.1.0.tar.gz/midi_markdown-0.1.0/tests/fixtures/invalid/imports/circular_a.mmd
---
device: Circular A
---

# Circular import: A imports B
@import "circular_b.mmd"

@alias cmd_a {ch} "Command A"
  - cc {ch}.1.0
@end
